--- a/public/TestRestLevel2.html
+++ b/public/TestRestLevel2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Level 2 REST</title>
   </head>
-  <body>
+  <body onload="refresh()">
     <h1>Post Messages</h1>
     <form>
         <label for="topic-name">Topic Name:</label><br>
@@ -28,10 +28,17 @@
         <button type="submit" onclick="addComment()">Submit Comment</button>
       </form>
       <div>
+        <h1>URL reference</h1>
+            <ul>
+                <li>Getting or posting posts: /posts</li>
+                <li>Getting or posting comments: /comments</li>
+              </ul>
+      </div>
+      <div>
         <h1>Posts</h1>
-        <p id="OutputPosts"></p>
+        <pre id="OutputPosts"></pre>
         <h1>Comments</h1>
-        <p id="OutputComments"></p>
+        <pre id="OutputComments"></pre>
       </div>
 </body>
 
@@ -81,7 +88,7 @@
         method: 'GET'
     })
     .then(response =>response.json())
-    .then(data => {document.getElementById("OutputPosts").innerHTML = JSON.stringify(data)})
+    .then(data => {document.getElementById("OutputPosts").innerHTML = JSON.stringify(data,undefined,2)})
     .catch(error => console.error(error))
   }
 
@@ -90,10 +97,13 @@
         method: 'GET'
     })
     .then(response =>response.json())
-    .then(data => {document.getElementById("OutputComments").innerHTML = JSON.stringify(data)})
+    .then(data => {document.getElementById("OutputComments").innerHTML = JSON.stringify(data,undefined,2)})
     .catch(error => console.error(error))
   }
-  getPosts();
+  function refresh(){
+    getPosts();
   getComments();
+  }
+
 </script>
 </html>
